@@ -36,7 +36,7 @@ plot.mi.method <- function( x, y,
     sigma <- sigma.hat( x )
     vrb.obs <- y
     vrb.imp <- imputed( x, y )
-    mi.hist(  object, vrb.obs, xlab=main, main = main, gray.scale = gray.scale )
+    mi.hist(x, vrb.obs, xlab=main, main = main, gray.scale = gray.scale )
     residual.plot( fit, res, sigma, main = main, gray.scale = gray.scale )
     binnedplot ( fit[ !is.na( y )], res[ !is.na( y )], 
               nclass = sqrt( length( fit[  !is.na( y )] ) ), main = main )
@@ -71,7 +71,7 @@ plot.mi.mixed <-  function ( x, y,
   main=deparse( substitute( y ) ), gray.scale = FALSE, ... ) {
   #par(mfrow=c(1,4))
   fit     <- fitted( x )
-  res     <- resid( x, y )
+  res     <- resid(x, y)
   sigma   <- sigma.hat( x )
   vrb.obs <- y
   vrb.imp <- imputed( x, y )
@@ -82,7 +82,7 @@ plot.mi.mixed <-  function ( x, y,
   mi.hist ( x, vrb.obs, xlab = main, main = main, gray.scale = gray.scale )
   binnedplot( fit1[ !is.na( y ) ], res1[ !is.na( y ) ], nclass=sqrt(length(fit1[ !is.na( y ) ])), main = main)
   residual.plot ( fit2[y>0], res2[y>0], sigma, main = main, gray.scale = gray.scale )
-  #mtext( "sqrt", 2, cex = 0.7, adj = 1 )
+  mtext( "sqrt", 2, cex = 0.7, adj = 1 )
   mi.scatterplot ( vrb.obs, vrb.imp, fit1*fit2,xlab = "predicted", ylab = main, main = main, gray.scale = gray.scale, display.zero=FALSE )
 }
 
@@ -122,8 +122,8 @@ plot.mi.sqrtcontinuous <- function ( x, y,
   vrb.obs <- y
   vrb.imp <- imputed( x, y )
   sqrta <- vrb.obs
-  sqrta[!is.na(vrb.obs)] <-sqrt(vrb.obs[!is.na(vrb.obs)])
-  mi.hist( x, vrb.obs,main = main, xlab=main, gray.scale = gray.scale )
+  sqrta[!is.na(vrb.obs)] <- sqrt(vrb.obs[!is.na(vrb.obs)])
+  mi.hist(x, vrb.obs, main = main, xlab=main, gray.scale = gray.scale )
   #mtext( "sqrt", 1, cex = 0.7, adj = 1 )
   residual.plot( fit, res, sigma, main = main, xlab= "Predicted",  ylab = paste( "Residual" ), gray.scale = gray.scale )
   mtext( "sqrt", 2, cex = 0.7, adj = 1 )
@@ -166,7 +166,7 @@ plot.mi.polr <- function ( x, y,
   sigma   <- factor2num( sigma.hat( x ) )
   vrb.obs <- factor2num( y )
   vrb.imp <- factor2num( imputed( x, y ) )
-  mi.hist(  x, vrb.obs,xlab = main, main = main, gray.scale = gray.scale ) 
+  mi.hist(  x, vrb.obs, xlab = main, main = main, gray.scale = gray.scale ) 
   binnedplot( fit[  !is.na( y ) ], res[  !is.na( y ) ], nclass = sqrt( length( fit[ !is.na( y ) ] ) ), main = main )
   mtext( "Binned Residual", 3, cex = 0.7, adj = NA ) 
   mi.scatterplot( vrb.obs, vrb.imp, fit, xlab = "predicted", ylab = main, main = main, gray.scale = gray.scale )
@@ -203,10 +203,10 @@ plot.mi.categorical <- function ( x, y,
   sigma   <- sigma.hat( x )
   vrb.obs <- y
   vrb.imp <- imputed( x, y )
-  mi.hist(  x, vrb.obs, type = vrb.typ, xlab = main, main = main, gray.scale = gray.scale )
+  mi.hist(  x, Yobs=vrb.obs, type = vrb.typ, xlab = main, main = main, gray.scale = gray.scale )
   binnedplot( fit[ !is.na(y) ], res[ !is.na(y) ], nclass = sqrt( length( fit[ !is.na(y)] ) ), main = main)
   mtext( "Binned Residual", 3, cex = 0.7, adj = NA ) 
-  mi.scatterplot( vrb.obs, vrb.imp, fit, xlab = "predicted", ylab = main, main = main, gray.scale = gray.scale )
+  mi.scatterplot( Yobs=vrb.obs, vrb.imp, fit, xlab = "predicted", ylab = main, main = main, gray.scale = gray.scale )
   plot( 0, 0, type = "n", xaxt = "n", yaxt = "n", xlab = "", ylab = "", frame.plot = FALSE )
 } 
 
@@ -239,10 +239,10 @@ plot.mi.dichotomous <- function ( x, y,
           sigma   <- sigma.hat( x )
           vrb.obs <- y
           vrb.imp <- imputed( x, y )
-          mi.hist ( x, vrb.obs, xlab = main, main = main, gray.scale = gray.scale )
+          mi.hist ( x, Yobs=vrb.obs, xlab = main, main = main, gray.scale = gray.scale )
           binnedplot ( fit[ !is.na( y )], res[ !is.na( y )], nclass = sqrt( length( fit[  !is.na( y )] ) ), main = main )
           mtext( "Binned Residual", 3, cex = 0.7, adj = NA )
-          mi.scatterplot( vrb.obs, vrb.imp, fit, xlab = "Predicted", ylab = main, main = main, gray.scale = gray.scale )
+          mi.scatterplot( Yobs=vrb.obs, vrb.imp, fit, xlab = "Predicted", ylab = main, main = main, gray.scale = gray.scale )
           plot( 0, 0, type = "n", xaxt = "n", yaxt = "n", xlab = "", ylab = "", frame.plot = FALSE )
 } 
 
@@ -278,8 +278,8 @@ plot.mi.logcontinuous <- function ( x, y,
     vrb.obs <- y
     vrb.imp <- imputed( x, y ) 
     loga  <- vrb.obs
-    loga[!is.na(vrb.obs)] <-log(vrb.obs[!is.na(vrb.obs)])
-    mi.hist(  x, loga, type = vrb.typ, main = main, xlab=paste("log(",main,")"), gray.scale = gray.scale )
+    loga[!is.na(vrb.obs)] <- log(vrb.obs[!is.na(vrb.obs)])
+    mi.hist(x, loga, type = vrb.typ, main = main, xlab=paste("log(",main,")"), gray.scale = gray.scale )
     mtext( "log", 1, cex = 0.7, adj = 1 )
     residual.plot( log(fit), res, sigma, main = main, xlab= "log(Predicted)",  ylab = paste( "log(Residual)" ), gray.scale = gray.scale )
     mtext( "log", 1, cex = 0.7, adj = 1 )
