@@ -7,7 +7,7 @@
 \alias{imputed}
 \alias{print,mi.method-method}
 \alias{plot.mi.method}
-\alias{fitted,mi.method-method}
+\alias{fitted.mi.method}
 \alias{coef.mi.method}
 \alias{imputed,mi.method-method}
 \alias{resid,mi.method-method}
@@ -23,7 +23,7 @@
   \S4method{imputed}{mi.method}(object,y)
   \S3method{coef}{mi.method}(object, \dots)
   \S4method{sigma.hat}{mi.method}(object, \dots)
-  \S4method{fitted}{mi.method}(object, \dots)
+  \S3method{fitted}{mi.method}(object, \dots)
   \S4method{resid}{mi.method}(object, y)
   \S4method{print}{mi.method}(x, \dots)
   \S3method{plot}{mi.method}(x, y, main=deparse( substitute( y ) ), gray.scale = FALSE, \dots)
